Developer/src/objects/ActualVersusForecast__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <formula>Program__r.cycle_name__r.contractnumber_cycle__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>契約名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CycleName__c</fullName>
        <formula>Program__r.cycle_name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サイクル名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <formula>Program__r.DB_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndFlag__c</fullName>
        <formula>IF( Program__r.WCheck1__c, &quot;終了&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>終了</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast__c</fullName>
        <label>予定時間</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <formula>Program__r.cycle_name__r.contractnumber_cycle__r.opportunity_cdb__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>案件名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>作業名</label>
        <referenceTo>program_req__c</referenceTo>
        <relationshipLabel>ActualVersusForecast</relationshipLabel>
        <relationshipName>ActualVersusForecast</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <formula>TEXT(Program__r.DB_Sent_Rule__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>タスク種類</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkDate__c</fullName>
        <label>作業日付</label>
        <type>Date</type>
    </fields>
    <label>ActualVersusForecast</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ActualVersusForecast名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>